# obj2voxel

./: .gitignore  Cargo.toml  README.md
.github/workflows/: rust.yml
src/: main.rs  tribox.rs
