[package]
name = "obj2voxel"
version = "0.2.2"
authors = ["Mario Geiger <geiger.mario@gmail.com>"]
edition = "2018"

[dependencies]
obj = "*"
clap = "*"
npy = "0.4"
npy-derive = "0.4"
kiss3d = { version = "*", optional = true }
nalgebra = "*"
rand = "*"
rand_distr = "*"
clippy = {version = "*", optional = true}

[features]
default = []
viewer = ["kiss3d"]
