[package]
name = "obj2voxel"
version = "0.2.3"
authors = ["Mario Geiger <mge@ik.me>"]
edition = "2018"

[dependencies]
obj = "*"
clap = "*"
npy = "*"
npy-derive = "*"
kiss3d = { version = "*", optional = true }
nalgebra = "*"
rand = "*"
rand_distr = "*"
clippy = {version = "*", optional = true}

[features]
default = []
viewer = ["kiss3d"]  # cargo build --features viewer
