[package]
name = "obj2voxel"
version = "0.2.5"
authors = ["Mario Geiger <mge@ik.me>"]
edition = "2018"

[dependencies]
obj = "0.10.2"
clap = "3.1.6"
npy = "0.4.0"
npy-derive = "0.4.0"
kiss3d = { version = "0.34.0", optional = true }
nalgebra = "0.31.0"
rand = "0.8.5"
rand_distr = "0.4.3"
clippy = {version = "0.0.302", optional = true}

[features]
default = []
viewer = ["kiss3d"]  # cargo build --features viewer
